--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@uniswap/v3-sdk": "^3.9.0",
     "bignumber.js": "^9.1.0",
     "ethers": "^5.7.2",
+    "firebase": "^9.13.0",
+    "firebase-tools": "^11.16.0",
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.6.0",
