--- a/firebase.json
+++ b/firebase.json
@@ -2,12 +2,6 @@
   "hosting": {
     "site": "vjk-swap",
     "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
